; ModuleID = '/home/carl/AnghaBench/php-src/ext/soap/extr_php_sdl.c_sdl_deserialize_string.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/soap/extr_php_sdl.c_sdl_deserialize_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@WSDL_NO_STRING_MARKER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8**)* @sdl_deserialize_string to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @sdl_deserialize_string(i8** %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8**, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store i8** %0, i8*** %3, align 8
  %6 = load i32, i32* %5, align 4
  %7 = load i8**, i8*** %3, align 8
  %8 = call i32 @WSDL_CACHE_GET_INT(i32 %6, i8** %7)
  %9 = load i32, i32* %5, align 4
  %10 = load i32, i32* @WSDL_NO_STRING_MARKER, align 4
  %11 = icmp eq i32 %9, %10
  br i1 %11, label %12, label %13

12:                                               ; preds = %1
  store i8* null, i8** %2, align 8
  br label %26

13:                                               ; preds = %1
  %14 = load i32, i32* %5, align 4
  %15 = add nsw i32 %14, 1
  %16 = call i8* @emalloc(i32 %15)
  store i8* %16, i8** %4, align 8
  %17 = load i8*, i8** %4, align 8
  %18 = load i32, i32* %5, align 4
  %19 = load i8**, i8*** %3, align 8
  %20 = call i32 @WSDL_CACHE_GET_N(i8* %17, i32 %18, i8** %19)
  %21 = load i8*, i8** %4, align 8
  %22 = load i32, i32* %5, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds i8, i8* %21, i64 %23
  store i8 0, i8* %24, align 1
  %25 = load i8*, i8** %4, align 8
  store i8* %25, i8** %2, align 8
  br label %26

26:                                               ; preds = %13, %12
  %27 = load i8*, i8** %2, align 8
  ret i8* %27
}

declare dso_local i32 @WSDL_CACHE_GET_INT(i32, i8**) #1

declare dso_local i8* @emalloc(i32) #1

declare dso_local i32 @WSDL_CACHE_GET_N(i8*, i32, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
